sofabaton-x-server write capability fixes
